--- a/.github/workflows/build-wheel-release-upload.yml
+++ b/.github/workflows/build-wheel-release-upload.yml
@@ -1,7 +1,6 @@
 name: Release (GitHub/PyPI) and Deploy Docs
 
 on:
-  workflow_dispatch:
   push:
 
 
@@ -9,7 +8,7 @@ on:
 
 jobs:
   build-release:
-    uses: ycexiao/release-scripts/.github/workflows/_build-wheel-release-upload.yml@v0
+    uses: ycexiao/release-scripts/.github/workflows/_build-wheel-release-upload.yml@main
     with:
       project: diffpy.pdffit2
       c_extension: true
