--- a/.github/workflows/build-wheel-release-upload.yml
+++ b/.github/workflows/build-wheel-release-upload.yml
@@ -10,3 +10,6 @@ jobs:
       project: diffpy.pdffit2
       c_extension: true
       maintainer_GITHUB_username: ycexiao
+    secrets:
+      PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
+      PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
