--- a/.github/workflows/build-wheel-release-upload.yml
+++ b/.github/workflows/build-wheel-release-upload.yml
@@ -3,16 +3,14 @@ name: Release (GitHub/PyPI) and Deploy Docs
 on:
   workflow_dispatch:
   push:
-    tags:
-      - "*" # Trigger on all tags initially, but tag and release privilege are verified in _build-wheel-release-upload.yml
 
 jobs:
   build-release:
-    uses: scikit-package/release-scripts/.github/workflows/_build-wheel-release-upload.yml@v0
+    uses: ycexiao/release-scripts/.github/workflows/_build-wheel-release-upload.yml@fix-python-versions
     with:
       project: diffpy.pdffit2
       c_extension: true
-      maintainer_GITHUB_username: sbillinge
+      maintainer_GITHUB_username: ycexiao
     secrets:
       PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
       PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
